--- a/src/app/pages/dashboards/project-control/project-control.component.scss
+++ b/src/app/pages/dashboards/project-control/project-control.component.scss
@@ -13,3 +13,37 @@
 .dropdown-disable::after{
     display: none !important;
 }
+
+.chip {
+    display: inline-block;
+    padding: 0 10px;
+    //height: 50px;
+    font-size: 12px;
+    line-height: 24px;
+    border-radius: 25px;
+    color: white;
+    background-color: #405189;
+    width: auto;//100%;
+    margin-left: 10px;
+  }
+  
+  .closebtn {
+    padding-left: 10px;
+    color: white;
+    //font-weight: bold;
+    float: right;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .closebtn:hover {
+    color: #000;
+  }
+
+  .sub-item{
+    margin-left: 40px !important;
+  }
+
+  .sub-item2{
+    margin-left: 80px !important;
+  }
