--- a/src/app/pages/projects/create/evaluation/follow/follow.component.html
+++ b/src/app/pages/projects/create/evaluation/follow/follow.component.html
@@ -377,7 +377,7 @@
     </div>
 </div>
 
-<div class="row" *ngIf="evaluation && evaluation.auditoria">
+<div class="row" *ngIf="evaluation && evaluation.auditoria" style="display: none;">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
